fixed overflow issue

--- a/template.css
+++ b/template.css
@@ -74,7 +74,7 @@ section{
     padding: 20px;
     margin: 20px;
     border-radius: 5px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .siding{
     display: flex;
